# MLOps

./: .coveragerc  .dvcignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  cloudbuild.yaml  data.dvc  gcloud_container_command.sh  index.html  objects.inv  pyproject.toml  requirements.txt  requirements_bentoapi.txt  requirements_dev.txt  requirements_frontend.txt  requirements_gpu.txt  requirements_tests.txt  tasks.py  vertex_train.dvc
.dvc/: config
.github/workflows/: cml_data.yaml  cml_temp.yaml  deploy_docs.yaml  lint.yaml  pre-commit.yaml  stage_model.yaml  tests.yaml
bentoml_api/: bentofile.yaml
bentoml_api/src/: load_model.py  service.py
data/: data.py  index.html
dockerfiles/: api.dockerfile  bento.dockerfile  frontend.dockerfile  train.dockerfile  train_gcloud.dockerfile  train_gcloud_ori.dockerfile
docs/: mkdocs.yaml
docs/source/: data.md  index.md  model.md  visualization.md
model/: index.html
notebooks/: data.ipynb
reports/: README.md
search/: search_index.json
src/pet_fac_rec/: api.py  data.py  evaluate.py  model.py  preprocessing.py  train.py  utils.py  visualize.py
src/pet_fac_rec/configs/experiment/: exp1.yaml  exp2.yaml
src/streamlit/: frontend.py
tests/: generate_dummy_model.py  test_data.py
tests/integrationtests/: test_api.py
tests/performancetests/: locustfile.py  test_model.py
tests/unittests/: __init__.py  test_data.py  test_model.py
vertex_config/: config_cpu.yaml  config_gpu.yaml  vertex_set_secrets_cpu.yaml  vertex_set_secrets_gpu.yaml
visualization/: index.html
