[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pet_fac_rec"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "MLOppers", email = "your@email.com" },
]
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "pet_fac_rec.train:app"
evaluate = "pet_fac_rec.evaluate:app"
preprocess = "pet_fac_rec.data:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
