[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps"
version = "0.1.0"
description = "MLOps Project"
requires-python = ">=3.11"

[project.scripts]
train = "pet_fac_rec.train:app"
evaluate = "pet_fac_rec.evaluate:app"
preprocess = "pet_fac_rec.data:main"

[tool.pylint.MASTER]
ignore = ["CVS"]
persistent = true
load-plugins = []

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2
